noop: fix that <option>'s text-align takes effects on Firefox

--- a/pages/options.css
+++ b/pages/options.css
@@ -89,6 +89,7 @@ button.left:focus+select.right {
 }
 select.right > option {
   background-color: #f3f3f3;
+  text-align: left;
 }
 
 pre, kbd, .code {
